k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portalt-admin
  namespace: portalt
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - admin.portalt.com
    secretName: portalt-admin-tls
  rules:
  - host: admin.portalt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portalt-admin
            port:
              number: 80
